k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hub
  template:
    metadata:
      labels:
        app: hub
    spec:
      tolerations:
        - key: node-role.kubernetes.io/control-plane
          operator: Exists
          effect: NoSchedule
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: hub
                topologyKey: kubernetes.io/hostname
      containers:
        - name: hub
          image: jeanmichelbb/hub:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 500m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hub
spec:
  selector:
    app: hub
  ports:
    - port: 3000
      targetPort: 3000
